# bluebird

./: CMakeLists.txt  README.md  carbin_deps.txt
bluebird/: CMakeLists.txt
bluebird/bits/: bitmap.h  bitmap64.h
bluebird/bits/roaring/: CMakeLists.txt  array_util.c  array_util.h  bitset.c  bitset_util.c  bitset_util.h  isadetection.c  memory.c  portability.h  roaring.c  roaring.h  roaring_array.c  roaring_array.h  roaring_priority_queue.c  utilasm.h
bluebird/bits/roaring/bitset/: bitset.h
bluebird/bits/roaring/containers/: array.c  array.h  bitset.c  bitset.h  container_defs.h  containers.c  containers.h  convert.c  convert.h  mixed_andnot.c  mixed_andnot.h  mixed_equal.c  mixed_equal.h  mixed_intersection.c  mixed_intersection.h  mixed_negation.c  mixed_negation.h  mixed_subset.c  mixed_subset.h  mixed_union.c  mixed_union.h  mixed_xor.c  mixed_xor.h  run.c  run.h
bluebird/bits/roaring/misc/: configreport.h
bluebird/divsufsort/: CMakeLists.txt  divsufsort.c  divsufsort_private.h  sssort.c  trsort.c  utils.c
bluebird/matcher/: prefix_map.cc  prefix_map.h  prefix_matcher.cc  prefix_matcher.h
bluebird/matcher/trie/: cedar.h  cedarpp.h
bluebird/succinct/: bit_vector_il.h  bit_vectors.h  bits.cc  bits.h  bp_support.h  bp_support_algorithm.cc  bp_support_algorithm.h  bp_support_g.h  bp_support_gg.h  bp_support_sada.h  coder.h  coder_comma.h  coder_elias_delta.cc  coder_elias_delta.h  coder_elias_gamma.cc  coder_elias_gamma.h  coder_fibonacci.cc  coder_fibonacci.h  config.cc  config.h  construct.h  construct_bwt.h  construct_config.cc  construct_config.h  construct_isa.cc  construct_isa.h  construct_lcp.cc  construct_lcp.h  construct_lcp_helper.cc  construct_lcp_helper.h  construct_sa.cc  construct_sa.h  construct_sa_se.cc  construct_sa_se.h  csa_alphabet_strategy.cc  csa_alphabet_strategy.h  csa_bitcompressed.h  csa_sada.h  csa_sampling_strategy.h  csa_wt.h  (+96 more)
cmake/: carbin_cxx_config.cmake  carbin_deps.cmake  carbin_option.cmake
cmake/modules/: carbin_cc_library.cmake
conda/: environment_linux.yaml  meta.yaml
examples/: CMakeLists.txt
examples/bits/: CMakeLists.txt  example.cc
(+32 files in other folders)
